--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
   <body>
     <h1>The Adventures of Time Boy</h1>
     <h3>
-      Time Remaining:
-      <span id="minutesRemaining">5</span> :
-      <span id="secondsRemaining">00</span>
+      The Time Is:
+      <span id="currentHour"></span> :
+      <span id="currentMinute"></span> :
+      <span id="currentSecond"></span> PM
+    </h3>
+    <h3>
+      Time Until Doomsday:
+      <span id="minutesRemaining"></span> :
+      <span id="secondsRemaining"></span>
     </h3>
   </body>
 </html>
