Add time reversal input.

--- a/index.html
+++ b/index.html
@@ -18,5 +18,10 @@
       <span id="minutesRemaining"></span> :
       <span id="secondsRemaining"></span>
     </h3>
+    <span>Go back in time </span>
+    <input id="timeJumpInput" type="number" min="1" max="5">
+    <span> seconds</span>
+    <br>
+    <button id="timeJumpSubmit">TIME JUMP</button>
   </body>
 </html>
