Display room temp and pocket watch temp.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>The Adventures of Time Boy</title>
+    <title>Time Boy vs. Thyme Boy</title>
     <script src="js/jquery-1.12.3.js"></script>
     <script src="js/scripts.js"></script>
   </head>
   <body>
-    <h1>The Adventures of Time Boy</h1>
+    <h1>Time Boy vs. Thyme Boy</h1>
     <h3>
       The Time Is:
       <span id="currentHour"></span> :
@@ -14,10 +14,16 @@
       <span id="currentSecond"></span> PM
     </h3>
     <h3>
-      Time Until Doomsday:
+      Time Until "Dinner":
       <span id="minutesRemaining"></span> :
       <span id="secondsRemaining"></span>
     </h3>
+    <h4>
+      Room Temperature: <span id="roomTemp"></span>&deg; F
+    </h4>
+    <h4>
+      Pocket-Watch Temperature: <span id="watchTemp"></span>&deg; F
+    </h4>
     <span>Go back in time </span>
     <input id="timeJumpInput" type="number" min="1" max="5">
     <span> seconds</span>
