--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       Pocket-Watch Temperature: <span id="watchTemp"></span>&deg; F
     </h4>
     <span>Go back in time </span>
-    <input id="timeJumpInput" type="number" min="1" max="5">
+    <input id="timeJumpInput" type="number">
     <span> seconds</span>
     <br>
     <button id="timeJumpSubmit">TIME JUMP</button>
